--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.6rem;
+}
 a {
   margin: 10px;
 }
