--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -1,8 +1,18 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  width: 100vw;
+  background-color: rgba(255, 0, 0, 0.116);
+  position: fixed;
+  top: 0;
+  left: 0;
   &__logo-container {
+    width: 100px;
   }
   &__logo {
-    width: 100px;
+    width: 50px;
   }
   &__menu {
   }
