--- a/src/components/styles/header.scss
+++ b/src/components/styles/header.scss
@@ -4,10 +4,12 @@
   align-items: center;
   height: 5rem;
   width: 100vw;
-  background-color: rgba(255, 0, 0, 0.116);
+  padding: 1.5rem 0;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.259);
   &__logo-container {
     width: 100px;
   }
