--- a/src/components/styles/footer.scss
+++ b/src/components/styles/footer.scss
@@ -6,9 +6,11 @@
   z-index: 2;
   background-color: rgba(255, 255, 255, 0.603);
   padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   p {
     margin-bottom: 0.5rem;
   }
