--- a/src/components/menu-item/menuItem.scss
+++ b/src/components/menu-item/menuItem.scss
@@ -1,17 +1,5 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 .menu-item {
-  min-width: 30%;
+  max-width: 30%;
   height: 240px;
   flex: 1 1 auto;
   display: flex;
@@ -24,6 +12,11 @@
   }
   &:last-child {
     margin-left: 7.5px;
+  }
+  &.large {
+    height: 300px;
+    max-width: 45%;
+    width: 45%;
   }
 }
 .content {
