--- a/src/amazon/styles/product.scss
+++ b/src/amazon/styles/product.scss
@@ -1,5 +1,8 @@
 .product {
-  border: 1px solid #777;
+  background-color: rgb(255, 255, 255);
+  padding: 10px 15px;
+  margin: 15px;
+  flex: 1;
   &__rating {
     color: goldenrod;
   }
@@ -11,8 +14,12 @@
     padding: 5px 10px;
     border-radius: 5px;
     font-size: 110%;
+    margin: 0 auto;
+    margin-top: 20px;
   }
   &__img {
+    display: block;
     width: 150px;
+    margin: 0 auto;
   }
 }
