--- a/src/bazaar/styles/bazaarApp.scss
+++ b/src/bazaar/styles/bazaarApp.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 1.8rem;
 }
