--- a/src/bazaar/styles/header.scss
+++ b/src/bazaar/styles/header.scss
@@ -1,5 +1,17 @@
 .header {
   padding: 2rem 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  &__logo {
+    display: inline-block;
+    img {
+      display: inline-block;
+      height: 25px;
+    }
+  }
   .container {
     display: flex;
     justify-content: space-between;
