--- a/src/bazaar/styles/hero.scss
+++ b/src/bazaar/styles/hero.scss
@@ -4,11 +4,16 @@
   background-size: cover;
   background-position: center;
   .container {
-    width: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-30%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    // width: 100%;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-30%, -50%);
   }
   &__heading {
     font-size: 4.5rem;
