--- a/src/bazaar/styles/bannerContainer.scss
+++ b/src/bazaar/styles/bannerContainer.scss
@@ -2,21 +2,35 @@
   padding: 5rem 0;
 }
 .slick-next {
-  right: 35px;
+  right: -15px;
+  position: absolute;
+
   transform: scale(1.4);
   box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: 0.15);
   border-radius: 50%;
   &:before {
-    color: red;
+    color: var(--primary-color);
   }
 }
 .slick-prev {
-  left: 35px;
+  position: absolute;
+  left: -15px;
   transform: scale(1.4);
   z-index: 1;
   box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: 0.15);
   border-radius: 50%;
   &:before {
-    color: red;
+    color: var(--primary-color);
   }
+}
+.offer__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.slick-slide {
+  margin-right: 1.5rem;
+}
+.slick-list {
+  height: 175px;
 }
