--- a/src/bazaar/styles/hero.scss
+++ b/src/bazaar/styles/hero.scss
@@ -9,11 +9,6 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    // width: 100%;
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-30%, -50%);
   }
   &__heading {
     font-size: 4.5rem;
@@ -47,5 +42,8 @@
     color: white;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    .fa {
+      margin-right: 0.7rem;
+    }
   }
 }
