bazar - style the collection item component

--- a/src/bazaar/styles/bazaarApp.scss
+++ b/src/bazaar/styles/bazaarApp.scss
@@ -18,6 +18,8 @@ body {
 }
 :root {
   --primary-color: rgb(62, 238, 238);
+  --color-gray-light-1: #f1f1f1;
+  --color-white: #fff;
 }
 .home-main {
   display: flex;
