bazar - added card button component

--- a/src/bazaar/styles/bazaarApp.scss
+++ b/src/bazaar/styles/bazaarApp.scss
@@ -17,7 +17,7 @@ body {
   margin: 0 auto;
 }
 :root {
-  --primary-color: rgb(62, 238, 238);
+  --primary-color: #3eeeee;
   --color-gray-light-1: #f1f1f1;
   --color-white: #fff;
 }
