intenso - style the header component

--- a/src/intenso/styles/button.scss
+++ b/src/intenso/styles/button.scss
@@ -3,6 +3,7 @@
   border: 1px solid #777;
   font-size: 1.6rem;
   border-radius: 5px;
+  cursor: pointer;
   &--sm {
     min-width: 12rem;
     padding: 1rem 1.3rem;
