intenso - added hero content component

--- a/src/intenso/styles/intensoApp.scss
+++ b/src/intenso/styles/intensoApp.scss
@@ -41,3 +41,10 @@ body {
   max-width: 114rem;
   margin: 0 auto;
 }
+.home-main {
+  padding: 4rem 0;
+}
+.heading__primary {
+  margin-bottom: 4rem;
+  font-size: 3.5rem;
+}
