--- a/src/intenso/styles/intensoApp.scss
+++ b/src/intenso/styles/intensoApp.scss
@@ -48,3 +48,8 @@ body {
   margin-bottom: 4rem;
   font-size: 3.5rem;
 }
+.heading__hexa {
+  text-align: center;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+}
