--- a/src/intenso/styles/hero.scss
+++ b/src/intenso/styles/hero.scss
@@ -3,7 +3,7 @@
 }
 .hero {
   &__content {
-    flex: 0 0 60%;
+    flex: 0 0 55%;
     align-self: flex-end;
     margin-right: 4rem;
     padding: 4rem 0;
@@ -28,7 +28,7 @@
     border: 2px solid rgb(16, 91, 134);
     padding: 1.5rem 2.5rem;
     .form-group {
-      margin-bottom: 2rem;
+      margin-bottom: 1.5rem;
     }
     label {
       font-size: 90%;
@@ -38,6 +38,16 @@
     .form-control {
       display: block;
       width: 100%;
+    }
+    .form-compound {
+      display: flex;
+      input {
+        flex: 0 0 75%;
+        margin-right: 5%;
+      }
+      select {
+        flex: 1;
+      }
     }
     .form-text-content {
       display: flex;
@@ -60,6 +70,22 @@
       display: flex;
       justify-content: space-between;
       margin: 2rem 0;
+    }
+    input,
+    select {
+      background-color: #f1f1f1;
+      padding: 0.7rem 1rem;
+      border: none;
+      border-radius: 4px;
+      &:focus {
+        outline: none;
+      }
+    }
+    select {
+      background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
+        no-repeat right #f1f1f1;
+      -webkit-appearance: none;
+      background-position-x: 98%;
     }
   }
 }
