intenso - make the home page ready

--- a/src/intenso/styles/hero.scss
+++ b/src/intenso/styles/hero.scss
@@ -82,8 +82,8 @@
       }
     }
     select {
-      background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
-        no-repeat right #f1f1f1;
+      // background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
+      //   no-repeat right #f1f1f1;
       -webkit-appearance: none;
       background-position-x: 98%;
     }
