--- a/src/intenso/styles/header.scss
+++ b/src/intenso/styles/header.scss
@@ -3,9 +3,58 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 0;
+  position: relative;
   &__buttons {
     button:first-of-type {
       margin-right: 2rem;
     }
+    @media (max-width: 56.25em) {
+      //900px
+      display: none;
+    }
+  }
+}
+.mobile-menu__content {
+  position: absolute;
+  right: 0;
+  bottom: -100%;
+  background-color: red;
+  opacity: 0;
+  visibility: hidden;
+}
+.mobile-menu__content.change {
+  opacity: 1;
+  visibility: visible;
+}
+//end of file
+.header__mobile-menu {
+  .header__mobile-menu-icon {
+    display: inline-block;
+    cursor: pointer;
+    margin-right: 0.3rem;
+  }
+
+  .bar1,
+  .bar2,
+  .bar3 {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: 5px 0;
+    transition: 0.4s;
+  }
+
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 4px);
+    transform: rotate(-45deg) translate(-9px, 4px);
+  }
+
+  .change .bar2 {
+    opacity: 0;
+  }
+
+  .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -2px);
+    transform: rotate(45deg) translate(-8px, -2px);
   }
 }
