--- a/src/intenso/styles/hero.scss
+++ b/src/intenso/styles/hero.scss
@@ -1,5 +1,9 @@
 .section-hero {
   display: flex;
+  @media (max-width: 56.25em) {
+    //900px
+    display: block;
+  }
 }
 .hero {
   &__content {
@@ -7,6 +11,10 @@
     align-self: flex-end;
     margin-right: 4rem;
     padding: 4rem 0;
+    @media (max-width: 56.25em) {
+      //900px
+      display: none;
+    }
   }
   &__text {
     margin-bottom: 3rem;
@@ -27,8 +35,16 @@
     flex: 1;
     border: 2px solid rgb(16, 91, 134);
     padding: 1.5rem 2.5rem;
+    @media (max-width: 56.25em) {
+      //900px
+      padding: 2.5rem 3.5rem;
+    }
     .form-group {
       margin-bottom: 1.5rem;
+      @media (max-width: 56.25em) {
+        //900px
+        margin-bottom: 2.5rem;
+      }
     }
     label {
       font-size: 90%;
@@ -56,6 +72,10 @@
       display: flex;
       align-items: center;
       margin-bottom: 1rem;
+      @media (max-width: 56.25em) {
+        //900px
+        margin-bottom: 2.5rem;
+      }
       &:first-of-type {
         margin-right: 1rem;
       }
