--- a/src/intenso/styles/header.scss
+++ b/src/intenso/styles/header.scss
@@ -21,6 +21,7 @@
   background-color: red;
   opacity: 0;
   visibility: hidden;
+  transition: all 0.3s;
 }
 .mobile-menu__content.change {
   opacity: 1;
