--- a/src/intenso/styles/hero.scss
+++ b/src/intenso/styles/hero.scss
@@ -47,7 +47,7 @@
       }
     }
     label {
-      font-size: 90%;
+      font-size: 75%;
       margin-bottom: 0.5rem;
       display: inline-block;
     }
@@ -72,6 +72,8 @@
       display: flex;
       align-items: center;
       margin-bottom: 1rem;
+      font-size: 1.1rem;
+      color: rgb(16, 91, 134);
       @media (max-width: 56.25em) {
         //900px
         margin-bottom: 2.5rem;
@@ -88,6 +90,7 @@
       font-weight: 900;
       color: rgb(16, 91, 134);
       display: flex;
+      font-size: 1.5rem;
       justify-content: space-between;
       margin: 2rem 0;
     }
@@ -104,8 +107,14 @@
     select {
       // background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png)
       //   no-repeat right #f1f1f1;
-      -webkit-appearance: none;
+
+      // -webkit-appearance: none;
+      background: no-repeat right #f1f1f1;
+      // -webkit-appearance: none;
       background-position-x: 98%;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
     }
   }
 }
