--- a/src/intenso/styles/intensoApp.scss
+++ b/src/intenso/styles/intensoApp.scss
@@ -15,35 +15,61 @@ html {
   }
 }
 @font-face {
-  font-family: "brands";
-  src: url(webfonts/fa-light-300.ttf);
+  font-family: "MyWebFont";
+  src: url("./webfonts/fa-light-300.woff2") format("woff2"),
+    url("./webfonts/fa-light-300.woff") format("woff"),
+    url("./webfonts/fa-light-300.ttf") format("truetype");
   font-style: normal;
   font-weight: 300;
 }
 @font-face {
-  font-family: "brands";
-  src: url(webfonts/fa-brands-400.ttf);
+  font-family: "MyWebFont";
+  src: url("./webfonts/fa-regular-400.woff2") format("woff2"),
+    url("./webfonts/fa-brands-400.woff") format("woff"),
+    url("./webfonts/fa-brands-400.ttf") format("truetype");
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: "brands";
-  src: url(webfonts/fa-solid-900.ttf);
+  font-family: "MyWebFont";
+  src: url("./webfonts/fa-solid-900.woff2") format("woff2"),
+    url("./webfonts/fa-solid-900.woff") format("woff"),
+    url("./webfonts/fa-solid-900.ttf") format("truetype");
   font-style: normal;
   font-weight: 900;
 }
+// @font-face {
+//   font-family: "brands";
+//   src: url(webfonts/fa-light-300.ttf);
+//   font-style: normal;
+//   font-weight: 300;
+// }
+// @font-face {
+//   font-family: "brands";
+//   src: url(webfonts/fa-brands-400.ttf);
+//   font-style: normal;
+//   font-weight: 400;
+// }
+// @font-face {
+//   font-family: "brands";
+//   src: url(webfonts/fa-solid-900.ttf);
+//   font-style: normal;
+//   font-weight: 900;
+// }
 :root {
   --color-primary: #408080;
 }
 
 body {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 400;
   background-image: url("../assets/home-bg.png");
   background-size: cover;
   background-position: center;
   //   font-family: brands;
   //   font-weight: 300;
+  font-family: "MyWebFont", Fallback, sans-serif;
+  font-weight: 400;
 }
 .container {
   max-width: 114rem;
