--- a/src/bazaar/styles/cardOverview.scss
+++ b/src/bazaar/styles/cardOverview.scss
@@ -1,6 +1,26 @@
 .card-overview {
   position: fixed;
+  min-width: 10rem;
+  height: 9rem;
+  background-color: var(--primary-color);
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  padding: 1rem;
+  &__item {
+    color: var(--color-white);
+    font-size: 1.6rem;
+    display: flex;
+    align-items: center;
+    span {
+      margin-left: 0.5rem;
+    }
+  }
+  &__price {
+    background-color: var(--color-white);
+    text-align: center;
+    padding: 0.5rem;
+    border-radius: 4px;
+    margin: 0.7rem 0;
+  }
 }
