bazar - added search functionality for hero

--- a/src/bazaar/styles/collections.scss
+++ b/src/bazaar/styles/collections.scss
@@ -29,10 +29,12 @@
     margin: 2rem 0;
   }
   &__price {
+    margin-left: 5%;
     padding: 1rem 0;
     font-weight: 700;
   }
   &__name {
+    margin-left: 5%;
     font-size: 95%;
     padding-bottom: 1.5rem;
     color: #ccc;
