--- a/src/bazaar/styles/bazaarApp.scss
+++ b/src/bazaar/styles/bazaarApp.scss
@@ -21,6 +21,9 @@ body {
   --color-gray-light-1: #f1f1f1;
   --color-white: #fff;
 }
+.home {
+  overflow: hidden;
+}
 .home-main {
   display: flex;
 }
