--- a/frontend/src/notifications/styles/notificationApp.scss
+++ b/frontend/src/notifications/styles/notificationApp.scss
@@ -2,7 +2,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
+}
+.notification-app {
+  border: 1px solid lightseagreen;
+  width: 80vw;
 }
 .login {
   display: flex;
@@ -23,4 +27,11 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.username {
+  font-weight: bold;
+  color: lightseagreen;
+  position: absolute;
+  top: 2rem;
+  right: 1rem;
 }
