--- a/frontend/src/social/components/topbar/topbar.scss
+++ b/frontend/src/social/components/topbar/topbar.scss
@@ -28,6 +28,10 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 20px;
+    color: white;
+  }
+  &-link {
+    margin-right: 10px;
   }
   &-icon {
     margin-right: 15px;
