--- a/frontend/src/social/components/sidebar/sidebar.scss
+++ b/frontend/src/social/components/sidebar/sidebar.scss
@@ -1,3 +1,20 @@
 .sidebar {
   flex: 3;
+  &__wrapper {
+    padding: 20px;
+  }
+  &__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  &__friend {
+    margin: 10px 0;
+    &-img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
 }
