--- a/src/newzeela/components/styles/headerMiddle.scss
+++ b/src/newzeela/components/styles/headerMiddle.scss
@@ -1,7 +1,34 @@
+.header-middle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 2%;
+}
+.header__logo {
+  display: block;
+  font-family: logoFont;
+  font-weight: 700;
+  color: #333;
+  font-size: 5rem;
+  text-decoration: none;
+}
+.header__banner {
+  flex: 0 0 40%;
+}
 .header__search {
+  flex: 0 0 30%;
   display: flex;
   align-items: center;
+  input {
+    width: 100%;
+    border-radius: 2rem;
+    padding: 1rem 1.5rem;
+    border: 1px solid #777;
+    &:focus {
+      outline: none;
+    }
+  }
   i {
-    margin-left: -2rem;
+    margin-left: -3rem;
   }
 }
