--- a/src/newzeela/components/styles/headerBottom.scss
+++ b/src/newzeela/components/styles/headerBottom.scss
@@ -15,6 +15,8 @@
     color: #fff;
   }
   &__main-menu {
+    margin-right: auto;
+    margin-left: 10rem;
     ul {
       list-style: none;
     }
