--- a/src/newzeela/components/styles/newzeelaApp.scss
+++ b/src/newzeela/components/styles/newzeelaApp.scss
@@ -2,6 +2,16 @@
   font-family: logoFont;
   src: url("../styles/font/Chomsky.otf");
 }
+@font-face {
+  font-family: gilroy;
+  src: url("../styles/font/Gilroy-Medium-1.otf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: gilroy;
+  src: url("../styles/font/Gilroy-SemiBold.otf");
+  font-weight: 700;
+}
 :root {
   --gray-text: #666;
   --text-color: #333;
@@ -19,7 +29,28 @@ body {
   font-size: 1.7rem;
   font-weight: 400;
   text-rendering: optimizeLegibility;
+  font-family: gilroy;
+  font-weight: 400;
 }
 .logo {
   font-family: logoFont;
 }
+// typography
+.heading-tertiary {
+}
+// reusable code
+.container {
+  padding-left: 2%;
+  padding-right: 2%;
+}
+.meta__link {
+  color: var(--text-color);
+  text-decoration: none;
+  &--border {
+    border-right: 1px solid var(--text-color);
+  }
+}
+// utilities
+@import "./utils/padding";
+@import "./utils/margin";
+@import "./utils/flex";
