--- a/src/crown/components/menu-item/menuItem.scss
+++ b/src/crown/components/menu-item/menuItem.scss
@@ -7,6 +7,9 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
