--- a/src/crown/components/custom-button/custom-buttom.styles.scss
+++ b/src/crown/components/custom-button/custom-buttom.styles.scss
@@ -9,7 +9,7 @@
   background-color: black;
   color: white;
   text-transform: uppercase;
-  font-family: 'Open Sans Condensed';
+  font-family: "Open Sans Condensed";
   font-weight: bolder;
   border: none;
   cursor: pointer;
@@ -18,5 +18,8 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+  &.google-btn {
+    background-color: blue;
   }
 }
