--- a/src/portfolio/components/topbar/topbar.scss
+++ b/src/portfolio/components/topbar/topbar.scss
@@ -1,4 +1,65 @@
+@import "../../global.scss";
 .topbar {
-  height: 5rem;
-  background-color: darkblue;
+  height: 7rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 1;
+  transition: all 0.5s ease;
+
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 2rem;
+    .left {
+      display: flex;
+      align-items: center;
+      .logo {
+        font-size: 3rem;
+      }
+      .topbar__icon {
+        margin-left: 1rem;
+        font-size: 1.8rem;
+      }
+    }
+    .right {
+      .hamburger {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 2.5rem;
+        width: 3.2rem;
+        cursor: pointer;
+        span {
+          width: 100%;
+          height: 3px;
+          display: inline-block;
+          background-color: $primary-color;
+          transform-origin: left;
+          transition: 0.6s ease;
+        }
+      }
+    }
+  }
+  &.active {
+    background-color: $primary-color;
+    color: white;
+    .logo {
+      color: white;
+    }
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: white;
+          transform: rotate(45deg);
+        }
+        &:last-child {
+          background-color: white;
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
 }
