--- a/src/portfolio/components/topbar/topbar.scss
+++ b/src/portfolio/components/topbar/topbar.scss
@@ -6,6 +6,8 @@
   left: 0;
   width: 100vw;
   z-index: 1;
+  background-color: white;
+  color: $primary-color;
   transition: all 0.5s ease;
 
   .wrapper {
