--- a/src/portfolio/components/intro/intro.scss
+++ b/src/portfolio/components/intro/intro.scss
@@ -1,3 +1,26 @@
 .intro {
-  background-color: orangered;
+  display: flex;
+  overflow: hidden;
+  .left {
+    flex: 0.5;
+    overflow: hidden;
+    .imgContainer {
+      height: 800px;
+      width: 800px;
+      background-color: orangered;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      float: right;
+      img {
+        width: 80%;
+        height: inherit;
+        object-fit: cover;
+      }
+    }
+  }
+  .right {
+    flex: 0.5;
+  }
 }
