--- a/src/portfolio/components/intro/intro.scss
+++ b/src/portfolio/components/intro/intro.scss
@@ -22,5 +22,38 @@
   }
   .right {
     flex: 0.5;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 6rem;
+    position: relative;
+    h1 {
+      font-size: 6rem;
+    }
+    h4 {
+      font-size: 3rem;
+    }
+    h5 {
+      font-size: 2.5rem;
+    }
+    button {
+      animation: blinkArrowDown 1s ease infinite;
+      position: absolute;
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+}
+@keyframes blinkArrowDown {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
