--- a/src/crown/components/button/button.styles.scss
+++ b/src/crown/components/button/button.styles.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components';
-
-export const BaseButton = styled.button`
+.button-container {
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -23,26 +21,26 @@ export const BaseButton = styled.button`
     color: black;
     border: 1px solid black;
   }
-`;
 
-export const GoogleSignInButton = styled(BaseButton)`
-  background-color: #4285f4;
-  color: white;
-
-  &:hover {
-    background-color: #357ae8;
-    border: none;
-  }
-`;
-
-export const InvertedButton = styled(BaseButton)`
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-
-  &:hover {
-    background-color: black;
+  &.google-sign-in {
+    background-color: #4285f4;
     color: white;
-    border: none;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
   }
-`;
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+  }
+}
