--- a/src/crown/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/crown/components/sign-up-form/sign-up-form.styles.scss
@@ -1,6 +1,4 @@
-import styled from 'styled-components';
-
-export const SignUpContainer = styled.div`
+.sign-up-container {
   display: flex;
   flex-direction: column;
   width: 380px;
@@ -8,4 +6,4 @@ export const SignUpContainer = styled.div`
   h2 {
     margin: 10px 0;
   }
-`;
+}
