--- a/src/crown/index.scss
+++ b/src/crown/index.scss
@@ -1,11 +1,29 @@
 body {
   margin: 0;
-  font-family: 'Open Sans Condensed', sans-serif;
+  padding: 20px 40px;
+  font-family: "Open Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+* {
+  box-sizing: border-box;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.checkbox {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
