addeed decrement button to cart

--- a/src/crown/index.scss
+++ b/src/crown/index.scss
@@ -1,13 +1,12 @@
 body {
   margin: 0;
-  padding: 20px 40px;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -18,4 +17,19 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.dropdown {
+  position: absolute;
+  top: 4rem;
+  right: 1rem;
+  height: 300px;
+  width: 200px;
+  overflow: hidden;
+  overflow-y: auto;
+  border: 1px solid tomato;
 }
